--- a/Navigation.ipynb
+++ b/Navigation.ipynb
@@ -17,8 +17,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 1,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-05-26T06:51:41.871012Z",
+     "start_time": "2021-05-26T06:51:41.482629Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from unityagents import UnityEnvironment\n",
@@ -47,11 +52,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 2,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-05-26T06:51:51.766786Z",
+     "start_time": "2021-05-26T06:51:46.045088Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:unityagents:\n",
+      "'Academy' started successfully!\n",
+      "Unity Academy name: Academy\n",
+      "        Number of Brains: 1\n",
+      "        Number of External Brains : 1\n",
+      "        Lesson number : 0\n",
+      "        Reset Parameters :\n",
+      "\t\t\n",
+      "Unity brain name: BananaBrain\n",
+      "        Number of Visual Observations (per agent): 0\n",
+      "        Vector Observation space type: continuous\n",
+      "        Vector Observation space size (per agent): 37\n",
+      "        Number of stacked Vector Observation: 1\n",
+      "        Vector Action space type: discrete\n",
+      "        Vector Action space size (per agent): 4\n",
+      "        Vector Action descriptions: , , , \n"
+     ]
+    }
+   ],
    "source": [
-    "env = UnityEnvironment(file_name=\"...\")"
+    "env = UnityEnvironment(file_name=\"Banana_Windows_x86_64/Banana.exe\")"
    ]
   },
   {
@@ -63,8 +96,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-05-26T06:51:51.782772Z",
+     "start_time": "2021-05-26T06:51:51.768780Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# get the default brain\n",
@@ -91,9 +129,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 4,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-05-26T06:51:52.391192Z",
+     "start_time": "2021-05-26T06:51:51.783741Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of agents: 1\n",
+      "Number of actions: 4\n",
+      "States look like: [1.         0.         0.         0.         0.84408134 0.\n",
+      " 0.         1.         0.         0.0748472  0.         1.\n",
+      " 0.         0.         0.25755    1.         0.         0.\n",
+      " 0.         0.74177343 0.         1.         0.         0.\n",
+      " 0.25854847 0.         0.         1.         0.         0.09355672\n",
+      " 0.         1.         0.         0.         0.31969345 0.\n",
+      " 0.        ]\n",
+      "States have length: 37\n"
+     ]
+    }
+   ],
    "source": [
     "# reset the environment\n",
     "env_info = env.reset(train_mode=True)[brain_name]\n",
@@ -113,6 +173,31 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-05-26T06:56:52.245647Z",
+     "start_time": "2021-05-26T06:56:52.232685Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "unityagents.brain.BrainInfo"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(env_info)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -127,9 +212,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 5,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-05-26T00:45:23.252978Z",
+     "start_time": "2021-05-26T00:44:55.393132Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Score: 0.0\n"
+     ]
+    }
+   ],
    "source": [
     "env_info = env.reset(train_mode=False)[brain_name] # reset the environment\n",
     "state = env_info.vector_observations[0]            # get the current state\n",
@@ -157,8 +255,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 6,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-05-26T00:45:32.744639Z",
+     "start_time": "2021-05-26T00:45:32.728710Z"
+    }
+   },
    "outputs": [],
    "source": [
     "env.close()"
@@ -179,9 +282,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "drlnd",
    "language": "python",
-   "name": "python3"
+   "name": "drlnd"
   },
   "language_info": {
    "codemirror_mode": {
@@ -193,7 +296,20 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.13"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
